Edited files  Please enter the commit message for your changes. Lines starting

--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "predeploy": "npm audit",
     "deploy": "git push heroku master"
   },
-  "repository": {
-
-  },
+  "repository": {},
   "keywords": [
     "node",
     "mocha",
