--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "express": "^4.16.4",
     "helmet": "^3.16.0",
     "morgan": "^1.9.1",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "xss": "^1.0.6"
   },
   "devDependencies": {
     "chai": "^4.2.0",
